# connectathon-2025-demo-agendamiento

./: README.md  body_solicitar_cita.json  docker-compose.yml  fhir.py  main.py  pyproject.toml  utils.py
models/: appointment.py  appointment_request.py
src/: .env.example  diagnosticos_snomed.json  main.py  settings.py  utils.py
src/fhir_apis/: auth.py  body_crear_cita.json  body_solicitar_cita.json  fhir.py
src/models/: accept_appointment.py  accept_reject_appointment.py  appointment.py  appointment_create_request.py  appointment_request.py  practitioner.py  single_appointment.py
