[project]
name = "demo-agendamiento"
version = "0.1.0"
description = "Demo de agendamiento de citas"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "openai>=1.59.5",
    "pydantic>=2.10.5",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "ruff>=0.9.0",
    "twilio>=9.4.2",
    "uvicorn>=0.34.0",
]
